2005-10-31  Sven Neumann  <sven@gimp.org>

	* app/plug-in/plug-ins.c (plug_ins_init): only call the status
	callback for plug-ins that are actually queried or initialized.

2005-10-31  Sven Neumann  <sven@gimp.org>

	* app/actions/data-commands.[ch]: added new action command
	data_copy_location_cmd_callback().

	* app/actions/brushes-actions.c
	* app/actions/gradients-actions.c
	* app/actions/palettes-actions.c
	* app/actions/patterns-actions.c
	* app/widgets/gimphelp-ids.h
	* menus/brushes-menu.xml
	* menus/gradients-menu.xml
	* menus/palettes-menu.xml
	* menus/patterns-menu.xml: added Copy Location menu entries to all
	data views. Allows to retrieve the file location for data files.

2005-10-31  Tor Lillqvist  <tml@novell.com>

	* gimptool-win32.c.in: Drop unnecessary <sys/stat.h>.
	(gtk_config): Drop the GIMP 1.2.x and gtk+-1-3-win32-production
	support.
	(get_cflags): Output GIMP's -I switch before GTK's CFLAGS. Use
	"include/gimp-2.0" instead of just "include".
	(get_libs, get_libs_noui): Update the list of libraries to match
	reality, use GIMP_API_VERSION in library names.
	(get_sys_plugin_dir): Use GIMP_PLUGIN_VERSION and not
	GIMP_MAJOR_VERSION.GIMP_MINOR_VERSION in the plug-in folder name.

2005-10-31  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdata.[ch]
	* app/core/gimpdatafactory.c: applied a heavily modified version
	of the patch provided by Shlomi Fish in bug #311740. Introduces a
	cache to speed up reloading of data files.

	* app/actions/data-commands.c: set gimp busy while refreshing data
	factories.

	* app/widgets/gimpwidgets-utils.c (gimp_widget_accel_changed):
	free the return value of gimp_get_accel_string().

2005-10-31  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewablebutton.[ch] (gimp_viewable_button_new):
	add GimpViewType parameter.

	* app/widgets/gimptemplateeditor.c
	* app/widgets/gimpviewablebox.c: pass view types, using grid view
	for brushes and patterns ass suggested in bug #315443.
